# aws-resource-tagger

./: .gitignore  README.md  aws_resources.json  fetch_schemas.py  index.html  pyproject.toml  tag_resources.py
